[package]
name = "ecc"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
categories = ["config", "command-line-utilities"]

[dependencies]
esparrier-config = { path = "../esparrier-config" }
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
clap-num = "1"
clap_complete = "4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
