[package]
name = "ecc"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
categories = ["config", "command-line-utilities"]

[dependencies]
log = "0.4"
env_logger = "0.11"
esparrier-config = { path = "../esparrier-config" }
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
clap-num = "1"
clap_complete = "4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3"
flate2 = "1"
tar = "0.4"
tempfile = "3"
semver = "1"
