[package]
name = "esparrier-config-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
esparrier-config = { path = "../esparrier-config" }
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
clap_derive = "4.5"
clap-num = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
