[package]
name = "esparrier-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
log = "0.4"
thiserror = "2"
nusb = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
